feat: create user model, service, handler, interface, update login to check user against db
