# handler/login/login.go
@@ -1,11 +1,14 @@
 package login
 
 import (
+	"database/sql"
 	"encoding/json"
+	"errors"
 	"log"
 	"net/http"
 	"time"
 
+	"github.com/JulianaSau/carzone/driver"
 	"github.com/JulianaSau/carzone/models"
 	"github.com/golang-jwt/jwt/v4"
 )
@@ -30,11 +33,25 @@ func LoginHandler(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	valid := (credentials.UserName == "admin" && credentials.Password == "admin123")
+	// valid := (credentials.UserName == "admin" && credentials.Password == "admin123")
 
-	if !valid {
+	// if !valid {
+	// 	http.Error(w, "Incorrect Username or Password", http.StatusUnauthorized)
+	// 	w.WriteHeader(http.StatusUnauthorized)
+	// 	return
+	// }
+
+	// Get the user from the database by username
+	user, err := getUserByUsername(credentials.UserName)
+	if err != nil {
+		http.Error(w, "Internal server error", http.StatusInternalServerError)
+		log.Println("Error fetching user: ", err)
+		return
+	}
+
+	// Check if the password is correct
+	if err := user.CheckPassword(credentials.Password); err != nil {
 		http.Error(w, "Incorrect Username or Password", http.StatusUnauthorized)
-		w.WriteHeader(http.StatusUnauthorized)
 		return
 	}
 
@@ -76,3 +93,45 @@ func GenerateToken(username string) (string, error) {
 
 	return signedToken, nil
 }
+
+// getUserByUsername retrieves a user from the database based on the username.
+func getUserByUsername(username string) (*models.User, error) {
+	// Prepare the SQL query to find a user by username
+	query := `
+		SELECT username, password, first_name, last_name, email, phone_number, role, id, active, created_at, updated_at
+		FROM "user"
+		WHERE username = $1
+	`
+	var user models.User
+
+	// Use the database connection to query the database
+	err := driver.GetDB().QueryRow(query, username).Scan(
+		&user.UserName,
+		&user.Password,
+		&user.FirstName,
+		&user.LastName,
+		&user.Email,
+		&user.PhoneNumber,
+		&user.Role,
+		&user.ID,
+		&user.Active,
+		&user.CreatedAt,
+		&user.UpdatedAt,
+	)
+
+	// If no rows are found, return an error indicating that the user does not exist
+	if err == sql.ErrNoRows {
+		return nil, errors.New("user not found")
+	}
+
+	// Log any other error that occurs during the query
+	if err != nil {
+		log.Println("Error retrieving user:", err)
+		return nil, err
+	}
+
+	// Return the user object
+	return &user, nil
+}
+
+// getUserByUsername retrieves a user from the database based on the username.
